--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "service-provider-starter",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "It's Service Provider Core starter",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rafael Pegorari <rafapegorari@gmail.com>",
